--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,7 +3,7 @@ name: ci
 on: pull_request
 jobs:
     test: 
-        runs-on: ubunto-latest
+        runs-on: ubuntu-latest
         steps:
             - name: primeira CI nossa
               run: echo "hello hello"
@@ -13,5 +13,3 @@ jobs:
 
             - name: qual diretorio
               run: echo $(pwd)
-
-
