fix: change to push

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,15 +1,20 @@
 name: ci
 
-on: pull_request
+on: push
 jobs:
     test: 
         runs-on: ubuntu-latest
+        strategy:
+          matrix:
+            python-version: [3.9, 3.10, 3.11, 3.12]
         steps:
-            - name: primeira CI nossa
-              run: echo hello hello
+            - name: Baixar o repositório
+              uses: actions/checkout@v4
             
-            - name: primeira CI nossa
-              run: echo hello world!
+            - name: instalar o Python
+              uses: actions/setup-python@v5
+              with:
+                python-version: ${{ matrix.python-version }}
 
             - name: o que tem aqui
               run: echo $(ls)
