--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-email_validator==2.1.1
-pydantic==2.7.1
-pytest==8.2.0
-selenium==4.21.0
-streamlit==1.34.0
-taskipy==1.12.2
-openpyxl==3.1.2
-mkdocs==1.6.0
-mkdocs-material==9.5.24
+email_validator
+pydantic
+pytest
+selenium
+streamlit
+taskipy
+openpyxl
+mkdocs
+mkdocs-material
