--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,88 @@
-email_validator
-pydantic
-pytest
-selenium
-streamlit
-taskipy
-openpyxl
-mkdocs
-mkdocs-material
+altair==5.3.0
+annotated-types==0.6.0
+attrs==23.2.0
+Babel==2.15.0
+blinker==1.8.2
+cachetools==5.3.3
+certifi==2024.2.2
+cffi==1.16.0
+charset-normalizer==3.3.2
+click==8.1.7
+colorama==0.4.6
+dnspython==2.6.1
+email_validator==2.1.1
+et-xmlfile==1.1.0
+ghp-import==2.1.0
+gitdb==4.0.11
+GitPython==3.1.43
+greenlet==3.0.3
+h11==0.14.0
+idna==3.7
+iniconfig==2.0.0
+Jinja2==3.1.4
+jsonschema==4.22.0
+jsonschema-specifications==2023.12.1
+Markdown==3.6
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+mdurl==0.1.2
+mergedeep==1.3.4
+mkdocs==1.6.0
+mkdocs-autorefs==1.0.1
+mkdocs-get-deps==0.2.0
+mkdocs-material==9.5.24
+mkdocs-material-extensions==1.3.1
+mkdocstrings==0.25.1
+mslex==1.2.0
+numpy==1.26.4
+openpyxl==3.1.2
+outcome==1.3.0.post0
+packaging==24.0
+paginate==0.5.6
+pandas==2.2.2
+pathspec==0.12.1
+pillow==10.3.0
+platformdirs==4.2.2
+pluggy==1.5.0
+protobuf==4.25.3
+psutil==5.9.8
+psycopg2-binary==2.9.9
+pyarrow==16.1.0
+pycparser==2.22
+pydantic==2.7.1
+pydantic_core==2.18.2
+pydeck==0.9.1
+Pygments==2.18.0
+pymdown-extensions==10.8.1
+PySocks==1.7.1
+pytest==8.2.0
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+pytz==2024.1
+PyYAML==6.0.1
+pyyaml_env_tag==0.1
+referencing==0.35.1
+regex==2024.5.15
+requests==2.31.0
+rich==13.7.1
+rpds-py==0.18.1
+selenium==4.21.0
+six==1.16.0
+smmap==5.0.1
+sniffio==1.3.1
+sortedcontainers==2.4.0
+SQLAlchemy==2.0.30
+streamlit==1.34.0
+taskipy==1.12.2
+tenacity==8.3.0
+toml==0.10.2
+tomli==2.0.1
+toolz==0.12.1
+tornado==6.4
+trio==0.25.1
+trio-websocket==0.11.1
+typing_extensions==4.11.0
+tzdata==2024.1
+urllib3==2.2.1
+watchdog==4.0.0
+wsproto==1.2.0
